--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -8,4 +8,4 @@
   I like long romantic walks down the produce aisle. Also, I am currently job seeking!
 </p>
 
-{% endblock %}
+{% endblock content %}
