--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,6 +28,7 @@
     </div>
     <nav>
       <ul>
+        <li><a href="/records">All Records</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
