--- a/main_app/templates/records/index.html
+++ b/main_app/templates/records/index.html
@@ -22,18 +22,20 @@
 <section class="card-container">
   {% for record in records %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static 'images/sk8r-boi-cat.svg' %}" 
-            alt="A skater boy cat"
-          >
+      <a href="/records/{{ record.id }}">
+        <div class="card-content">
+          <div class="card-img-container">
+            <img 
+              src="{% static 'images/sk8r-boi-cat.svg' %}" 
+              alt="A skater boy cat"
+            >
+          </div>
+          <h2 class="card-title">{{ record.name }}</h2>
+            <p>by {{ record.artist }}</p>
+            <p>released in: {{ record.release_year }}</p>
+          <p><small>{{ record.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ record.name }}</h2>
-          <p>by {{ record.artist }}</p>
-          <p>released in: {{ record.release_year }}</p>
-        <p><small>{{ record.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
