--- a/main_app/templates/records/index.html
+++ b/main_app/templates/records/index.html
@@ -22,7 +22,7 @@
 <section class="card-container">
   {% for record in records %}
     <div class="card">
-      <a href="/records/{{ record.id }}">
+      <a href="{% url 'records_detail' record.id %}">
         <div class="card-content">
           <div class="card-img-container">
             <img 
