adjusts hrefs in base html to use the url template tag

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,8 +28,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/records">All Records</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'records_index' %}">All Records</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
