implements creation of a single cat

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'records_index' %}">All Records</a></li>
+        <li><a href="{% url 'records_create' %}">Add a Record</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
