--- a/main_app/templates/main_app/record_form.html
+++ b/main_app/templates/main_app/record_form.html
@@ -6,9 +6,14 @@
 {% endblock %}
 
 {% block content %}
+  
 
 <div class="page-header">
-  <h1>Add a Record</h1>
+  {% if record %}
+    <h1>Edit {{ record.name }}</h1>
+  {% else %}
+    <h1>Add a Record</h1>
+  {% endif %}
   <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/>
 </div>
 {% comment %} 
