implements functionality to add a song and view a page of all songs

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,7 +29,9 @@
     <nav>
       <ul>
         <li><a href="{% url 'records_index' %}">All Records</a></li>
+        <li><a href="{% url 'songs_index' %}">All Songs</a></li>
         <li><a href="{% url 'records_create' %}">Add a Record</a></li>
+        <li><a href="{% url 'songs_create' %}">Add a Song</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
