--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,7 +6,6 @@
 {% endblock %}
 
 {% block content %}
-
 <section class="logo-container">
   <div class="cat-container">
     <img src="{% static 'images/splash.svg' %}" alt="The Record Collector Cat" />
@@ -15,6 +14,16 @@
     src="{% static 'images/logotype.svg' %}" 
     alt="Text reads: Record Collector"
   />
+</section>
+
+<section>
+  <form action="{% url 'home' %}" method="post" class="login">
+    <h1>Login</h1>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="hidden" name="next" value="{{ next }}">
+    <button type="submit" class="btn submit">Login</button>
+  </form>
 </section>
 
 {% endblock %}
