implements login and logout functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,11 +28,17 @@
     </div>
     <nav>
       <ul>
-        <li><a href="{% url 'records_index' %}">All Records</a></li>
-        <li><a href="{% url 'songs_index' %}">All Songs</a></li>
-        <li><a href="{% url 'records_create' %}">Add a Record</a></li>
-        <li><a href="{% url 'songs_create' %}">Add a Song</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'records_index' %}">All Records</a></li>
+          <li><a href="{% url 'songs_index' %}">All Songs</a></li>
+          <li><a href="{% url 'records_create' %}">Add a Record</a></li>
+          <li><a href="{% url 'songs_create' %}">Add a Song</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+        {%endif%}
       </ul>
     </nav>
   </header>
