--- a/main_app/templates/records/detail.html
+++ b/main_app/templates/records/detail.html
@@ -135,7 +135,7 @@
         {% endfor %}
       {% else %}
         <p class="all-toys">
-          {{record.name}} already has all the available songs 🥳
+          None
         </p>
       {% endif %}
     </div>
