deletes unnecessary images and comments out unused image links in code

--- a/main_app/templates/main_app/record_form.html
+++ b/main_app/templates/main_app/record_form.html
@@ -14,7 +14,7 @@
   {% else %}
     <h1>Add a Record</h1>
   {% endif %}
-  <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/>
+  {% comment %} <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/> {% endcomment %}
 </div>
 
 <form action="" method="post" class="form-container">
