--- a/main_app/templates/records/detail.html
+++ b/main_app/templates/records/detail.html
@@ -43,7 +43,7 @@
   <section class="feedings">
     <div class="subsection-title">
       <h2>Last Spun</h2>
-      <img 
+      {% comment %} <img 
         src="{% static 'images/cat-cone.svg' %}" 
         alt="An ice cream cone cat"
       />
@@ -54,7 +54,7 @@
       <img 
         src="{% static 'images/kitty-kabob.svg' %}" 
         alt="A kabob of kittens"
-      />
+      /> {% endcomment %}
     </div>
     <h3>Add a Listening Session</h3>
     <form
@@ -95,9 +95,9 @@
   <section class="songs">
     <div class="subsection-title">
       <h2>Songs</h2>
-      <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
+      {% comment %} <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
       <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
-      <img src="{% static 'images/fish.svg' %}" alt="A fishy toy" />
+      <img src="{% static 'images/fish.svg' %}" alt="A fishy toy" /> {% endcomment %}
     </div>
     <h3>{{ record.name }}'s Songs</h3>
     <div class="subsection-content">
