--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
+  {% comment %} <link
     rel="shortcut icon"
     type="image/png"
     href="{% static 'images/splash.svg' %}"
-  >
+  > {% endcomment %}
   <title>Record Collector</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
@@ -20,10 +20,10 @@
   <header>
     <div class="header-logo-container">
       <a href="/">
-        <img 
+        {% comment %} <img 
           src="{% static 'images/header-logo.svg' %}"
           alt="The Record Collector Logo"
-        >
+        > {% endcomment %}
       </a>
     </div>
     <nav>
