--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -8,12 +8,12 @@
 {% block content %}
 <section class="logo-container">
   <div class="cat-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Record Collector Cat" />
+    {% comment %} <img src="{% static 'images/splash.svg' %}" alt="The Record Collector Cat" /> {% endcomment %}
   </div>
-  <img 
+  {% comment %} <img 
     src="{% static 'images/logotype.svg' %}" 
     alt="Text reads: Record Collector"
-  />
+  /> {% endcomment %}
 </section>
 {% if not user.is_authenticated %}
   <section>
