--- a/main_app/templates/records/index.html
+++ b/main_app/templates/records/index.html
@@ -13,10 +13,10 @@
 
 <section class="page-header">
   <h1>Record List</h1>
-  <img src="{% static 'images/cool-cat.svg' %}" alt="A cool cat" />
+  {% comment %} <img src="{% static 'images/cool-cat.svg' %}" alt="A cool cat" />
   <img src="{% static 'images/happy-cat.svg' %}" alt="A happy cat" />
   <img src="{% static 'images/teacup-cat.svg' %}" alt="A cat in a teacup" />
-  <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" />
+  <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" /> {% endcomment %}
 </section>
 
 <section class="card-container">
