--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -71,6 +71,7 @@ h2 {
   font-size: var(--font-xl);
 }
 
+#home-link,
 nav a {
   text-decoration: none;
   color: var(--text-color);
@@ -96,7 +97,7 @@ nav li {
 .header-logo-container {
   margin: auto;
   padding: 10px 20px 0;
-  max-width: 500px;
+  max-width: 165px;
 }
 
 .page-header {
