--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,12 +19,7 @@
 <body>
   <header>
     <div class="header-logo-container">
-      <a href="/">
-        {% comment %} <img 
-          src="{% static 'images/header-logo.svg' %}"
-          alt="The Record Collector Logo"
-        > {% endcomment %}
-      </a>
+      <a id= 'home-link' href="/">Record Collector</a>
     </div>
     <nav>
       <ul>
