adds cool skater cat to home page

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -8,12 +8,8 @@
 {% block content %}
 <section class="logo-container">
   <div class="cat-container">
-    {% comment %} <img src="{% static 'images/splash.svg' %}" alt="The Record Collector Cat" /> {% endcomment %}
+    <img src="{% static 'images/sk8r-boi-cat.svg' %}" alt="Cool Skater Boy Cat" />
   </div>
-  {% comment %} <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Record Collector"
-  /> {% endcomment %}
 </section>
 {% if not user.is_authenticated %}
   <section>
