--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,7 +5,7 @@
 <h1>About the Record Collector</h1>
 <hr />
 <p class="page-content">
-  I like long romantic walks down the produce aisle. Also, I am currently job seeking!
+  Record Collector allows users to create records, add listening sessions to them, and how much of the record was spun! Users are also able to create songs and add them to their created records!
 </p>
 
 {% endblock content %}
