--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% comment %} <link
+  <link
     rel="shortcut icon"
     type="image/png"
-    href="{% static 'images/splash.svg' %}"
-  > {% endcomment %}
+    href="{% static 'images/sk8r-boi-cat.svg' %}"
+  >
   <title>Record Collector</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
