--- a/main_app/static/css/records/record-detail.css
+++ b/main_app/static/css/records/record-detail.css
@@ -1,4 +1,4 @@
-.cat-container {
+.record-container {
   padding: 35px 30px;
   display: flex;
   flex-direction: column;
@@ -11,20 +11,20 @@
   max-width: 350px;
 }
 
-.usr-img {
+/* .usr-img {
   width: 100%;
   border-radius: var(--card-border-radius);
-}
+} */
 
-.cat-details {
+.record-details {
   width: 98%;
 }
 
-.cat-actions {
+.record-actions {
   margin-top: 20px;
 }
 
-.feedings-toy-container {
+.spun-song-container {
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
@@ -41,7 +41,7 @@
   margin: 0 8px;
 }
 
-.toy-container {
+.song-container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -54,47 +54,47 @@
   margin-right: 10px;
 }
 
-.unfed,
-.fed,
-.no-toys,
-.all-toys {
+.unspun,
+.spun-rec,
+.no-songs,
+.all-songs {
   margin: 0;
   font-weight: bold;
 }
 
-.unfed,
-.no-toys {
+.unspun,
+.no-songs {
   color: var(--danger);
 }
 
-.fed,
-.all-toys {
+.spun-rec,
+.all-songs {
   color: var(--submit);
 }
 
-.cat-details h1 {
+.record-details h1 {
   font-size: var(--font-xxl);
   margin: 15px 0 3px;
 }
 
-.cat-details h2 {
+.record-details h2 {
   font-size: var(--font-xl);
   margin: 0 0 10px;
   margin-top: 0;
   margin-bottom: 10px;
 }
 
-.cat-details h3 {
+/* .cat-details h3 {
   margin: 20px 0 10px;
   font-size: var(--font-l);
-}
+} */
 
-.cat-details p {
+.record-details p {
   font-size: var(--font-reg);
   margin: 5px 0;
 }
 
-.feedings-toy-container > section {
+.spun-song-container > section {
   width: 80%;
   min-width: 360px;
   border: var(--borders);
@@ -116,14 +116,14 @@
   margin-left: 16px;
 }
 
-.feedings h2,
-.toys h2 {
+.spun h2,
+.songs h2 {
   font-size: 3.2rem;
   margin: 0;
 }
 
-.feedings h3,
-.toys h3 {
+.spun h3,
+.songs h3 {
   font-size: var(--font-xl);
   margin: 10px 0;
 }
@@ -140,38 +140,38 @@
   padding: 3px;
 }
 
-.feedings table {
+.spun table {
   width: calc(100% - 16px);
   text-align: left;
   border-collapse: collapse;
   margin: 0 8px;
 }
 
-.feedings td {
+.spun td {
   padding: 8px 5px;
   font-size: var(--font-reg);
 }
 
-.feedings th {
+.spun th {
   font-size: var(--font-l);
   padding: 5px 5px 0;
   border-bottom: rgb(36, 116, 248) solid 2px;
 }
 
-.feedings tr:nth-child(even) {
+.spun tr:nth-child(even) {
   background-color: #f3f3fd;
 }
 
-.toy-container p {
+.song-container p {
   margin: 12px 0;
 }
 
-.toy-container a {
+.song-container a {
   text-decoration: none;
   color: #111;
 }
 
-.toy-container .btn {
+.song-container .btn {
   padding: 3px 10px;
   margin-left: 10px;
 }
@@ -188,7 +188,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .cat-container {
+  .record-container {
     padding: 35px 30px;
     flex-direction: row;
     align-items: center;
@@ -201,19 +201,19 @@
     margin-right: 25px;
   }
 
-  .feedings-toy-container {
+  .spun-song-container {
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
   }
 
-  .feedings-toy-container > section {
+  .spun-song-container > section {
     width: 45%;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .feedings-toy-container {
+  .spun-song-container {
     padding: 0 40px;
   }
 }
